# ajazz-launchpad

./: .gitattributes  .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md
.github/actions/install-libudev/: action.yml
.github/workflows/: CI.yml
backend-process/: Cargo.toml  README.md
backend-process/src/: database.rs  device_management.rs  input_handler.rs  main.rs  protobuf_conversion.rs  socket.rs
backend-process/src/database/: mappers.rs  models.rs  operations.rs  sqlite.rs
backend-process/src/socket/: commands.rs  connection.rs
firmware-api/: Cargo.toml  README.md
firmware-api/examples/: set_background_image.rs  set_button_and_touchscreen_image.rs  simple_brightness_command.rs  simple_connect_and_read.rs  simple_image_set_and_clear.rs
firmware-api/src/: commands.rs  common.rs  device.rs  display_zones.rs  inputs.rs  lib.rs
firmware-api/src/commands/: messages.rs  output_buffer.rs  payloads.rs
firmware-api/src/inputs/: buttons.rs  input_buffer.rs  knobs.rs  touchscreen.rs
messaging/: Cargo.toml  README.md  build.rs
messaging/examples/: client_sending_key_config_to_server.rs  protobuf_communication_over_socket.rs
messaging/protobufs/: config.proto  key_config.proto  top_level.proto
messaging/protobufs/commands/: boot_logo.proto  brightness.proto  display_zone_image.proto  key_config.proto
messaging/protobufs/common/: keys.proto
messaging/src/: client_wrapper.rs  lib.rs  proto_builders.rs  socket.rs
messaging/src/protos/: boot_logo.rs  brightness.rs  config.rs  display_zone_image.rs  display_zones.rs  inputs.rs  key_config.rs  (+3 more)
(+2 files in other folders)
