[package]
name = "backend-process"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
enigo = { version = "0.6.1", features = ["serde"] }
firmware-api = { path = "../firmware-api" }
hidapi = "2.6.3"
messaging = { path = "../messaging" }
protobuf = "3.7.2"
ron = "0.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[lints]
workspace = true
